variables.RunFour.scala.error
Compilation error:
RunFour:3: error: not found: value is
  if (is OverBaggle){
      ^RunFour:4: error: not found: value pickupBAggle
    pickupBAggle()
    ^