variables.RunFour.scala.code
var x=0
while (x!=0){
  if (is OverBaggle){
    pickupBAggle()
    x = x + 1
  }
  forward()
  
}